// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should rander ExpenseSummary with 1 expense totalling $1.95 1`] = `
<div>
  <h3>
    Viewing 
    1
     expense 
    totalling 
    $1.95
  </h3>
</div>
`;

exports[`should render ExpenseSummary with 0 expenses totalling $0.00 1`] = `
<div>
  <h3>
    Viewing 
    0
     expenses 
    totalling 
    $0.00
  </h3>
</div>
`;
